[plugin][Himerace] illlusioner の弱攻撃はブロックを貫通しないことにする